tests/wpt/tests/infrastructure/test262/negative-parse.js
/*---
negative:
  type: SyntaxError
  phase: parse
---*/

$DONOTEVALUATE();
!@#$ // Invalid syntax
